Created initial GUI
Created initial GUI for LadderGame