@@ -10,10 +10,10 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <!-- Per Januar 2025 the LTS version is 21 -->
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <javafx.version>23.0.1</javafx.version>
   </properties>
 
   <dependencies>
@@ -25,11 +25,21 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- JavaFX controls -->
+    <!-- JavaFX dependencies -->
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <version>23.0.1</version>
+      <version>${javafx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>${javafx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-graphics</artifactId>
+      <version>${javafx.version}</version>
     </dependency>
 
     <!-- Gson for JSON serialization/deserialization -->
@@ -47,6 +57,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
+        <configuration>
+          <release>21</release>
+        </configuration>
       </plugin>
 
       <!-- Unit-test engine Surefire -->
@@ -62,7 +75,11 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-          <mainClass>edu.ntnu.idi.idatt.Main</mainClass>
+          <mainClass>edu.ntnu.idi.idatt.GUI.GUI</mainClass>
+          <options>
+          <option>--add-modules</option>
+          <option>javafx.controls,javafx.fxml</option>
+          </options>
         </configuration>
       </plugin>
     </plugins>
